--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
+    <meta name="keywords" content="sd,個人網站,聖迪,作品集,設計,美工">
     <meta name="author" content="">
 
     <title>SD's Website</title>
@@ -701,7 +702,7 @@
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 	
 	  ga('create', 'UA-75678614-3', 'auto');
-	   ga('require', 'displayfeatures');
+	  ga('require', 'displayfeatures');
 	  ga('send', 'pageview');
 	
 	</script>
