--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="聖迪的個人網站，作品集含聯絡方式！">
     <meta name="keywords" content="sd,個人網站,聖迪,作品集,設計,美工">
     <meta name="author" content="">
 
