--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="聖迪的個人網站，作品集含聯絡方式！">
+    <meta name="description" content="聖迪的個人網站，作品集與聯絡方式！">
     <meta name="keywords" content="sd,個人網站,聖迪,作品集,設計,美工">
     <meta name="author" content="">
 
-    <title>SD's Website</title>
+    <title>S.D.'s Website</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll animated zoomIn delay-03s" href="#page-top"><img class="img-responsive" src="img/logo.png" alt=""/></a>
+                <a class="navbar-brand page-scroll animated zoomIn delay-03s" href="#page-top"><img class="img-responsive" src="img/logo.png" alt="S.D.'s Website"/></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -159,7 +159,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/logo.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/logo.png" class="img-responsive" alt="Logo Design">
                     </a>
                     <div class="portfolio-caption">
                         <h4>S.D. Logo</h4>
@@ -173,7 +173,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/nmd.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/nmd.png" class="img-responsive" alt="Graphic Design">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Adidas NMD</h4>
@@ -187,7 +187,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/packaging01.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/packaging01.png" class="img-responsive" alt="Packaging Design">
                     </a>
                     <div class="portfolio-caption">
                         <h4>S.D. Package</h4>
@@ -201,7 +201,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/hotel-transylvania.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/hotel-transylvania.png" class="img-responsive" alt="Product Design">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Hotel Transylvania 2</h4>
@@ -215,7 +215,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/home.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/home.png" class="img-responsive" alt="Interior Design">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Photoshop Interior Design</h4>
@@ -229,7 +229,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/lipstick.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/lipstick.png" class="img-responsive" alt="Graphic Design">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Lipstick</h4>
@@ -243,7 +243,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/tiger.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/tiger.jpg" class="img-responsive" alt="Illustrations">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Tiger</h4>
@@ -257,7 +257,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/bikini.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/bikini.jpg" class="img-responsive" alt="Illustrations">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Bikini</h4>
@@ -280,7 +280,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="about-me">
-                        <img src="img/me/me.png" class="img-responsive img-circle" alt="">
+                        <img src="img/me/me.png" class="img-responsive img-circle" alt="S.D. Tseng">
                         <h4>S.D. Tseng</h4>
                         <p class="text-muted">Designer</p>
                         <ul class="list-inline social-buttons">
@@ -452,7 +452,7 @@
                             <!-- Project Details Go Here -->
                             <h2>S.D. Logo</h2>
                             <p class="item-intro text-muted">Logo Design</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/logo-preview.png" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/logo-preview.png" alt="S.D. Logo">
                             <p></p>
                             <p><a href="#"></a></p>
 
@@ -482,7 +482,7 @@
                         <div class="modal-body">
                             <h2>Adidas NMD</h2>
                             <p class="item-intro text-muted">Graphic Design</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/NMD-preview.jpg" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/NMD-preview.jpg" alt="Adidas NMD">
                             <p><a href="#"></a></p>
                             <ul class="list-inline">
                                 <li>Date: June 2016</li>
@@ -512,7 +512,7 @@
                             <!-- Project Details Go Here -->
                             <h2>S.D. Package</h2>
                             <p class="item-intro text-muted">Packaging Design</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/packaging01-preview.png" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/packaging01-preview.png" alt="S.D. Package">
                             <ul class="list-inline">
                                 <li>Date: June 2016</li>
                             </ul>
@@ -540,7 +540,7 @@
                             <!-- Project Details Go Here -->
                             <h2>hotel transylvania 2</h2>
                             <p class="item-intro text-muted">Product Diesign</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/hotel-transylvania-preview.png" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/hotel-transylvania-preview.png" alt=">hotel transylvania 2">
                             <ul class="list-inline">
                                 <li>Date: June 2016</li>
                             </ul>
@@ -568,7 +568,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Photoshop Interior Design</h2>
                             <p class="item-intro text-muted">Interior Design</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/home-preview.png" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/home-preview.png" alt="Photoshop Interior Design">
                             <ul class="list-inline">
                                 <li>Date: June 2016</li>
                             </ul>
@@ -596,7 +596,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Lipstick</h2>
                             <p class="item-intro text-muted">Graphic Design</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/lipstick-preview.png" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/lipstick-preview.png" alt="Lipstick">
                             <ul class="list-inline">
                                 <li>Date: June 2016</li>
                             </ul>
@@ -624,7 +624,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Tiger</h2>
                             <p class="item-intro text-muted">Illustrations</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/tiger-preview.jpg" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/tiger-preview.jpg" alt="Tiger">
                             <ul class="list-inline">
                                 <li>Date: June 2016</li>
                             </ul>
@@ -652,7 +652,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Bikini</h2>
                             <p class="item-intro text-muted">Illustrations</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/bikini-preview.jpg" alt="">
+                            <img class="img-responsive img-centered" src="img/portfolio/bikini-preview.jpg" alt="Bikini">
                             <ul class="list-inline">
                                 <li>Date: June 2016</li>
                             </ul>
