--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </section>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -145,7 +145,7 @@
             </div>
             <div class="portfolioFilter">
                 <ul class="Portfolio-nav wow fadeIn delay-03s">
-                    <li class="active"><a href="#" data-filter="*">All </a></li>
+                    <li class="active"><a href="#" data-filter="*">All</a></li>
                     <li><a href="#" data-filter=".Design">Design</a></li>                    
                     <li><a href="#" data-filter=".illustrations">Illustrations</a></li>
                     <li><a href="#" data-filter=".websites">Websites</a></li>
@@ -348,14 +348,7 @@
                         <span class="progress-type">CSS3</span>
                         <span class="progress-completed">55%</span>
                     </div> 
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-                            <span class="sr-only">50% Complete</span>
-                        </div>
-                        <span class="progress-type">Bootstrap</span>
-                        <span class="progress-completed">50%</span>
-                    </div>
-                </div> 
+               </div> 
             </div>  
          </div>                  
     </section>
