--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
 
     <link rel="icon" href="img/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png"/>
+	<link rel="bookmark" href="/img/favicon.png" type="image/png"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -284,11 +286,11 @@
                         <h4>S.D. Tseng</h4>
                         <p class="text-muted">Designer</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-instagram"></i></a>
+                            <li><a href="https://www.instagram.com/san_di1105/"><i class="fa fa-instagram"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://www.facebook.com/S.D.Tseng"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="https://tw.linkedin.com/in/sdtseng"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -406,11 +408,11 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://www.instagram.com/san_di1105"><i class="fa fa-instagram"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/S.D.Tseng"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://tw.linkedin.com/in/sdtseng"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
