--- a/index.html
+++ b/index.html
@@ -280,6 +280,20 @@
                         <p class="text-muted">Product Design</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item websites">
+                    <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/sdweb.png" class="img-responsive" alt="Web Design">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>S.D. Website</h4>
+                        <p class="text-muted">Web Design</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -691,6 +705,33 @@
                             <img class="img-responsive img-centered" src="img/portfolio/reflective-bracelet-preview.png" alt="Reflective Bracelet">
                             <ul class="list-inline">
                                 <li>Date: January 2016</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio Modal 10 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>S.D. Website</h2>
+                            <p class="item-intro text-muted">Web Diesign</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/sdweb-preview.png" alt="Web Diesign">
+                            <ul class="list-inline">
+                                <li>Date: June 2016</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
